tests/baselines/reference/jsxRuntimePragma(jsx=react-jsxdev).errors.txt
four.tsx(6,21): error TS2879: Using JSX fragments requires fragment factory 'Fragment' to be in scope, but it could not be found.
one.tsx(5,21): error TS2879: Using JSX fragments requires fragment factory 'Fragment' to be in scope, but it could not be found.


==== one.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime classic */
    import * as React from "react";
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
                        ~~
!!! error TS2879: Using JSX fragments requires fragment factory 'Fragment' to be in scope, but it could not be found.
    export const selfClosing = <img src="./image.png" />;
==== two.tsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime automatic */
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
    export const selfClosing = <img src="./image.png" />;
==== three.tsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime classic */
    /* @jsxRuntime automatic */
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
    export const selfClosing = <img src="./image.png" />;
==== four.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime automatic */
    /* @jsxRuntime classic */
    import * as React from "react";
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
                        ~~
!!! error TS2879: Using JSX fragments requires fragment factory 'Fragment' to be in scope, but it could not be found.
    export const selfClosing = <img src="./image.png" />;
==== index.ts (0 errors) ====
    export * as one from "./one.js";
    export * as two from "./two.js";
    export * as three from "./three.js";
    export * as four from "./four.js";